added new templates

--- a/templates/main.html
+++ b/templates/main.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stories</title>
+    <title>Let's Teamup</title>
 </head>
 <body>
-    <h2>Tell us your recent highlights</h2>
+    {% include 'navigation.html' %}
+    
+    {% block content %}
+        
+        
+    {% endblock %}
+        
 </body>
 </html>
