--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-    <h1>This is our home page</h1>
-</body>
-</html>
+{% extends 'main.html' %}
+
+{% block content %}
+<h1>Welcome y'all to our online space!</h1>
+<div>
+    <div>
+        {% for room in rooms %}
+            <div>
+                <h5>{{room.id}} -- {{room.name}}</h5>
+            </div>
+            
+        {% endfor %}
+    </div>
+</div>
+{% endblock %}
