--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -4,9 +4,13 @@
 <h1>Welcome y'all to our online space!</h1>
 <div>
     <div>
+        <a href="{% url 'create-room' %}">Create Room</a>
         {% for room in rooms %}
             <div>
+                <span>@{{room.host.username}}</span>
                 <h5>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
+                <small>{{room.topic.name}}</small>
+                <hr>
             </div>
             
         {% endfor %}
