--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,10 +1,26 @@
 {% extends 'main.html' %}
 
 {% block content %}
+<style>
+    .home-container{
+        display:grid;
+        grid-template-columns: 1fr 3fr;
+    }
+</style>
 <h1>Welcome y'all to our online space!</h1>
-<div>
+<div class="home-container">
+    <div>
+        <h3>Browse Topics</h3>
+        <hr>
+        {% for topic in topics %}
+            <div>
+                <a href="{% url 'home' %}?q={{topic.name}}">{{topic.name}}</a>
+            </div>
+        {% endfor %}
+    </div>
     <div>
         <a href="{% url 'create-room' %}">Create Room</a>
+        <div>
         {% for room in rooms %}
             <div>
                 <a href="{% url 'update-room' room.id %}">Edit</a>
@@ -16,6 +32,7 @@
             </div>
             
         {% endfor %}
+        </div>
     </div>
 </div>
 {% endblock %}
